integrate middleware
